--- a/UrichWebsite/Index.html
+++ b/UrichWebsite/Index.html
@@ -43,7 +43,7 @@
 <hr>
 
 <p>
-			While I'm wearing <b>pink</b> in <b>cleveland</b>, I'm eating <b>buffalo chicken wings</b> with my <family/> because we went on a long <b>bike ride</b> by the <b>Cuyahoga River</b>.
+			While I'm wearing <b>who</b> in <b>what</b>, I'm eating <b>where</b> with my when because we when <b>why</b> by the <b>how</b>.
 </p>
 	
 
